--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -159,7 +159,7 @@
       "type": "series",
       "name": "Hero Without a Class: Who Even Needs Skills?!",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169969-16Z6v22WTbO0.png",
-      "description": "Genres: Action, Adventure, Comedy, Fantasy\nTags:Shounen/Male Protagonist/Dungeon/Swordplay/Magic\n\"Classes\" are given at the age of 10, and the presence or absence of \"skills\" greatly affect life. Arel, the son of \"Sword Princess\" Fara and \"Magic King\" Leon, has been branded as \"Classless\"... But even without a job or skills, Arel believes he can persevere through effort.\n<br><br>\n(Source: Earth Star Entertainment, translated)"
+      "description": "Genres: Action, Adventure, Comedy, Fantasy\nTags:Shounen/Male Protagonist/Dungeon/Swordplay/Magic\nIn a world where one’s class determines everything, Arel, the son of a Sword Princess and an Archmage, was expected to inherit greatness. But when he discovers he’s classless, everything changes. Now he’s determined to prove that hard work and dedication are enough to not just succeed, but to excel as an adventurer!\n<br><br>\n(Source: HIDIVE)"
     },
     {
       "id": "tt36833523",
@@ -176,13 +176,6 @@
       "description": "Genres: Comedy, Romance, Slice of Life\nTags:Shounen/Kuudere/Heterosexual\nMeet Kashiwada-san, a female middle-school student, who remains emotionless regardless of how she is meddled with.\nAnd Oota-kun, unable to control his facial expressions, is the complete opposite of Kashiwada-san--but he keeps messing with her, against his better judgment?!\n<br><br>\nThough both of them are the exact opposite, will a mutual love eventually develop between them...?"
     },
     {
-      "id": "tt8228732",
-      "type": "series",
-      "name": "Kakuriyo -Bed & Breakfast for Spirits- 2",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177271-Lot4V9iMyPI7.jpg",
-      "description": "Genres: Drama, Romance, Slice of Life, Supernatural\nTags:Shoujo/Youkai/Food\nThe second season of <i>Kakuriyo no Yadomeshi</i>.<br><br>\n\nAoi—a girl who can see spirits known as ayakashi—was suddenly approached by an ogre. Demanding she pay her grandfather’s debt, Odanna made a huge request: her hand in marriage! Refusing this absurd offer, Aoi decided to work at the Tenjin-ya bed and breakfast to pay back what her family owes. Where we left off, Aoi continues her employment at the Tenjin-ya where even more ayakashi drama ensues and challenges await her.<br><br>\n\n(Source: Crunchyroll, edited)"
-    },
-    {
       "id": "tt32777700",
       "type": "series",
       "name": "Dad is a Hero, Mom is a Spirit, I'm a Reincarnator",
@@ -194,7 +187,21 @@
       "type": "series",
       "name": "Dusk Beyond the End of the World",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx195153-yiRxZP5pPJLi.png",
-      "description": "Genres: Action, Drama, Romance, Sci-Fi\nTags:Dystopian/Heterosexual/Robots\nThe world is on the verge of changing from an old fashioned society to a new world, due to issues such as gender, race and compliance along with technological innovations such as an evolving AI. Even in this world where black and white is now gray, we believe that “love” will always exist but in myriad forms and not just between people. This includes love between human and robot and its unique expression. The beauty of these emotions will be shown sometimes beautifully, sometimes brutally, and sometimes comically. How long can this love last? When a robot outlives its human partner, can their love hope to endure? <br><br>\n(Source: HIDIVE)\n<br><br>\n<i>Note: Includes Prologue.</i>"
+      "description": "Genres: Action, Drama, Romance, Sci-Fi\nTags:Dystopian/Heterosexual/Robots\nWhen growing tensions around AI spark civil unrest, Akira is caught in the crossfire when he protects his girlfriend from an assassin’s bullet. Hundreds of years later, he awakens from cryogenic sleep to an unfamiliar world. As he struggles to come to terms with his new reality, he bonds with an android called Yugure, who bears an uncanny resemblance to his girlfriend. Now, he must ask himself what love means in a world where technology has changed the very fabric of society.<br><br>\n(Source: HIDIVE)\n<br><br>\n<i>Note: Includes Prologue.</i>"
+    },
+    {
+      "id": "tt8228732",
+      "type": "series",
+      "name": "Kakuriyo -Bed & Breakfast for Spirits- 2",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177271-Lot4V9iMyPI7.jpg",
+      "description": "Genres: Drama, Romance, Slice of Life, Supernatural\nTags:Shoujo/Youkai/Food\nThe second season of <i>Kakuriyo no Yadomeshi</i>.<br><br>\n\nAoi—a girl who can see spirits known as ayakashi—was suddenly approached by an ogre. Demanding she pay her grandfather’s debt, Odanna made a huge request: her hand in marriage! Refusing this absurd offer, Aoi decided to work at the Tenjin-ya bed and breakfast to pay back what her family owes. Where we left off, Aoi continues her employment at the Tenjin-ya where even more ayakashi drama ensues and challenges await her.<br><br>\n\n(Source: Crunchyroll, edited)"
+    },
+    {
+      "id": "tt9193770",
+      "type": "series",
+      "name": "Isekai Quartet 3",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx194447-tf453jwAviDq.png",
+      "description": "Genres: Comedy, Fantasy, Slice of Life\nTags:Isekai/Parody/Female Protagonist/Male Protagonist/Chibi/Crossover/Ensemble Cast\nThe third season of <i>Isekai Quartet.</i>"
     },
     {
       "id": "tt38037460",
@@ -225,13 +232,6 @@
       "description": "Genres: Action, Comedy, Romance, Sci-Fi\nTags:Female Protagonist/Shoujo/Maids/Slapstick/Robots\n<i> “At last, she’s complete. This is Marie, a robot maid.”</i>\n<br><br>\nMarie, a former legendary martial artist, now conceals her identity as a human and starts working as a “robot” in the mansion of Arthur, heir to a conglomerate that despises humans. Her human identity must remain hidden—because one slip-up and she’s dead! Her naturally emotionless demeanor helps her maintain her “robot” disguise and flawlessly perform her duties, all while struggling to protect Arthur from assassins sent to take his life. She lives each day on the edge with her heart racing, because Arthur is head over heels for Marie, and her human identity is nearly exposed!<br><br>\n\nA maid pretending to be a robot x A young heir who hates humans. Get ready for a heartwarming comedy that’ll make you laugh and cry! What began as a lie between master and maid blossoms into a love neither of them saw coming.<br><br>\n\n(Source: Crunchyroll) "
     },
     {
-      "id": "tt37499375",
-      "type": "series",
-      "name": "DIGIMON BEATBREAK",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx188388-aXx9fsnvezBf.jpg",
-      "description": "Genres: Adventure, Fantasy, Sci-Fi\nTags:Urban\n<i>GLITCH THE FUTURE.</i><br><br>\n\n\"e-Pulse,\" which is generated by human thoughts and emotions, was used as the energy source for the AI support device \"Sapotama.\" From the shadows of this remarkable development, terrifying monsters appear. Digimon are living beings that evolve by consuming e-Pulse. Tomorou Tenma is drawn into an extraordinary experience after meeting Gekkomon, who suddenly appears from his Sapotama. While living together with Kyou Sawashiro and other members of the bounty hunting team \"Golden Dawn,\" Tomorou renews his resolve. What new future will be forged by humans and Digimon? <br><br>\n\n(Source: DIGIMON BEATBREAK Official Site, edited)"
-    },
-    {
       "id": "tt32896333",
       "type": "series",
       "name": "Li'l Miss Vampire Can't Suck Right",
@@ -246,11 +246,18 @@
       "description": "Genres: Adventure, Comedy, Fantasy, Slice of Life\nTags:Male Protagonist/Isekai/Magic/Food/Elf/Dragons\nKamishiro Takeru is a completely ordinary salaryman who reincarnates in another world—a world of swords and magic called Madeus—and starts his new isekai life with lots of new skills! Takeru must make the most of his enhanced physical strength, unbelievable magic power, and the \"Search\" ability that allows him to find items of worth as his great isekai journey begins!\n<br><br>\n\n(Source: Crunchyroll) <br><br>\n<i>Note: Each episode streams 1 week early on some streaming services. The original TV broadcast starts on October 7th, 2025.</i>"
     },
     {
+      "id": "tt37499375",
+      "type": "series",
+      "name": "DIGIMON BEATBREAK",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx188388-aXx9fsnvezBf.jpg",
+      "description": "Genres: Adventure, Fantasy, Sci-Fi\nTags:Urban\n<i>GLITCH THE FUTURE.</i><br><br>\n\n\"e-Pulse,\" which is generated by human thoughts and emotions, was used as the energy source for the AI support device \"Sapotama.\" From the shadows of this remarkable development, terrifying monsters appear. Digimon are living beings that evolve by consuming e-Pulse. Tomorou Tenma is drawn into an extraordinary experience after meeting Gekkomon, who suddenly appears from his Sapotama. While living together with Kyou Sawashiro and other members of the bounty hunting team \"Golden Dawn,\" Tomorou renews his resolve. What new future will be forged by humans and Digimon? <br><br>\n\n(Source: DIGIMON BEATBREAK Official Site, edited)"
+    },
+    {
       "id": "tt36987681",
       "type": "series",
-      "name": "Taiyou yori mo Mabushii Hoshi",
+      "name": "A Star Brighter Than the Sun",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186621-jFeAgDQkQMUm.jpg",
-      "description": "Genres: Romance\nTags:Shoujo/School/Heterosexual/Female Protagonist\nSae and Koki have been friends since childhood. One fateful day at the end of middle school, she has a revelation: Koki has grown up! Now they’re in high school, and she has another revelation: she has feelings for Koki! But Sae isn’t the only girl who does… The question is, who does Koki have feelings for?!<br><br>\n(Source: Viz)"
+      "description": "Genres: Romance\nTags:Shoujo/School/Heterosexual/Female Protagonist\nSae Iwata, a slightly tougher-than-average girl, falls for the gentle smile of Kouki Kamishiro, a delicate boy, back in elementary school. By the time they enter junior high school, Kuoki has grown into a charming and popular teen who now feels out of reach. When they are assigned to the sports festival committee together, Sae’s long-hidden first love begins to stir once more.\n<br><br>\n(Source: Amazon Prime Video, edited)"
     },
     {
       "id": "tt32832412",
@@ -323,6 +330,13 @@
       "description": "Genres: Comedy, Romance, Slice of Life\nTags:Heterosexual/Female Protagonist/Foreign/Video Games\nSamara “Sam” Young is a developer in Los Angeles who’s about to achieve her dreams with her first video game, Ruminate. That is, until a popular streamer gives the game a scathing review. Even worse, Sam finds out the troublesome critic is now her new neighbor! Get lost in a comedic, romantic, and all-too-real story about gaming, memes, and social anxiety. Come for the plot, stay for the doggo. <br><br>\n\n(Source: Crunchyroll) "
     },
     {
+      "id": "tt34710525",
+      "type": "series",
+      "name": "Cat's Eye",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184718-GvNnorokj1i3.jpg",
+      "description": "Genres: Action, Adventure, Comedy, Mystery, Romance\nTags:Crime/Female Protagonist/Shounen\nA new adaption of the manga of the same name by Tsukasa Houjou. <br><br>\n<i>Cat’s Eye</i> is a secretive trio of art thieves relentlessly pursued by Detective Toshio. Unbeknownst to him, the middle sister of the elusive thieves is none other than his girlfriend, Hitomi.<br><br>\n(Source: Disney+)"
+    },
+    {
       "id": "tt8225204",
       "type": "series",
       "name": "Golden Kamuy: Inazuma Goutou to Mamushi no Ogin/Shimaenaga",
@@ -335,20 +349,6 @@
       "name": "Alma-chan Wants to Be a Family!",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186190-Ru77wfF8I61X.jpg",
       "description": "Genres: Comedy, Romance, Sci-Fi, Slice of Life\nTags:Family Life/Artificial Intelligence/Robots/Iyashikei/Found Family\nA body that combines the appearance of an adorable young girl with overwhelming combat efficiency. An AI with intelligence and decision-making skills that surpass human capabilities—the perfect autonomous robot, \"Alma\" was created by the overlooked young genius scientists Enji and Suzume whose brilliance should've been recognized by the world! Alma calls Enji and Suzume \"Father\" and \"Mother\" which leaves them completely flustered. Regardless, the three begin a life together as a family in order to nurture Alma's powerful AI and help her evolve into the ultimate robot. Alma's curiosity has no limits as everything she sees and touches is new to her. Alma keeps Enji and Suzume on their toes with her unmatched learning capabilities and unstoppable energy as she explores the bigger world. A brand-new kind of family comedy (?!) begins!!<br><br>\n\n(Source: Crunchyroll)"
-    },
-    {
-      "id": "tt37815384",
-      "type": "series",
-      "name": "Plus-sized Misadventures in Love!",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx170936-NlDYAjV86ljm.png",
-      "description": "Genres: Comedy, Drama, Romance\nTags:Office Lady/Shoujo/Female Protagonist/Primarily Adult Cast\n<i>\"This is the punishment for a fat, ugly girl like me falling in love with someone as beautiful as you...\" </i><br><br>\nYumeko had a mountain of complexes about herself. Then, a terrible accident befalls her. Though somehow saved from the brink of death, Yumeko wakes up a completely different person. <i>\"This is...me...?! I'm SO cute!!\"</i>Those around her can't hide their surprise and wonderment at this 180° change... But, Yumeko's new hyper-positive attitude starts to change her surroundings, too. Worries and complexes can affect anyone, and Yumeko will chop right through those of her various supporting characters!! In love, work, friendship... And an attempted murder case?! This frenzied romantic comedy will leave you bubbling with energy!<br>\n<br>\n(Source: Manga Plaza)"
-    },
-    {
-      "id": "tt37038619",
-      "type": "series",
-      "name": "Ninja to Gokudou",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186914-Im7Jgud1XCag.png",
-      "description": "Genres: Action, Drama\nTags:Ninja/Yakuza\nSince before the dawn of memory, one thing has defined human history: the war between ninjas and yakuzas. This coarse and manly manga follows two members of these warring tribes who fill the gutters of modern Tokyo with blood to determine which elemental force will reign supreme!\n<br><br>\n(Source: Kodansha USA)"
     }
   ]
 }
