--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -187,28 +187,14 @@
       "type": "series",
       "name": "Dusk Beyond the End of the World",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx195153-yiRxZP5pPJLi.png",
-      "description": "Genres: Action, Drama, Romance, Sci-Fi\nTags:Dystopian/Heterosexual/Robots\nWhen growing tensions around AI spark civil unrest, Akira is caught in the crossfire when he protects his girlfriend from an assassin’s bullet. Hundreds of years later, he awakens from cryogenic sleep to an unfamiliar world. As he struggles to come to terms with his new reality, he bonds with an android called Yugure, who bears an uncanny resemblance to his girlfriend. Now, he must ask himself what love means in a world where technology has changed the very fabric of society.<br><br>\n(Source: HIDIVE)\n<br><br>\n<i>Note: Includes Prologue.</i>"
+      "description": "Genres: Action, Drama, Romance, Sci-Fi\nTags:Dystopian/Heterosexual/Robots/Boys' Love\nWhen growing tensions around AI spark civil unrest, Akira is caught in the crossfire when he protects his girlfriend from an assassin’s bullet. Hundreds of years later, he awakens from cryogenic sleep to an unfamiliar world. As he struggles to come to terms with his new reality, he bonds with an android called Yugure, who bears an uncanny resemblance to his girlfriend. Now, he must ask himself what love means in a world where technology has changed the very fabric of society.<br><br>\n(Source: HIDIVE)\n<br><br>\n<i>Note: Includes Prologue.</i>"
     },
     {
-      "id": "tt8228732",
-      "type": "series",
-      "name": "Kakuriyo -Bed & Breakfast for Spirits- 2",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177271-Lot4V9iMyPI7.jpg",
-      "description": "Genres: Drama, Romance, Slice of Life, Supernatural\nTags:Shoujo/Youkai/Food\nThe second season of <i>Kakuriyo no Yadomeshi</i>.<br><br>\n\nAoi—a girl who can see spirits known as ayakashi—was suddenly approached by an ogre. Demanding she pay her grandfather’s debt, Odanna made a huge request: her hand in marriage! Refusing this absurd offer, Aoi decided to work at the Tenjin-ya bed and breakfast to pay back what her family owes. Where we left off, Aoi continues her employment at the Tenjin-ya where even more ayakashi drama ensues and challenges await her.<br><br>\n\n(Source: Crunchyroll, edited)"
-    },
-    {
-      "id": "tt9193770",
+      "id": "tt37430949",
       "type": "series",
       "name": "Isekai Quartet 3",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx194447-tf453jwAviDq.png",
       "description": "Genres: Comedy, Fantasy, Slice of Life\nTags:Isekai/Parody/Female Protagonist/Male Protagonist/Chibi/Crossover/Ensemble Cast\nThe third season of <i>Isekai Quartet.</i>"
-    },
-    {
-      "id": "tt38037460",
-      "type": "series",
-      "name": "Pass the Monster Meat, Milady!",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183291-RHLPdeftGxeQ.jpg",
-      "description": "Genres: Fantasy, Romance\nTags:Female Protagonist/Shoujo/Royal Affairs/Food\nAny proper noble lady must cultivate refined tastes, and Lady Melphiera’s delicacy of choice is…monsters! Unfortunately, society frowns upon such unladylike cravings and brands her the “Voracious Villainess.” At a banquet, she’s attacked by a monster, only to be saved by the feared “Blood-Mad Duke.” He’s brutal, mysterious, and charming. Could he be the one to appreciate her monstrous appetite?\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt36631539",
@@ -218,11 +204,25 @@
       "description": "Genres: Action, Adventure, Fantasy\nTags:Magic/Dungeon/Male Protagonist\n<i>\"This party does not need a useless magician who can only use support magic. You are fired, Alec Huguette.\"</i>\n<BR><BR>\nOne day, Alec, a court magician who had been chaperoning the Crown Prince's dungeon-crawling party, was suddenly fired and banished from the court by the prince. The only one who reached out to him is Yoruha, his former party member from their Academy of Magic days, that had split up four years ago. \n<BR><BR>\n<i>\"Hey Alec— would you like to come explore dungeons with us again?\"</i>\n<BR><BR>\nThus the legendary \"Lasting Period\" party was revived, and the name will soon became known all over the world once again.\n<BR><BR>\n(Source: Lanove Bunko, translated)"
     },
     {
+      "id": "kitsu:48822",
+      "type": "series",
+      "name": "Kakuriyo -Bed & Breakfast for Spirits- 2",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177271-Lot4V9iMyPI7.jpg",
+      "description": "Genres: Drama, Romance, Slice of Life, Supernatural\nTags:Shoujo/Youkai/Food\nThe second season of <i>Kakuriyo no Yadomeshi</i>.<br><br>\n\nAoi—a girl who can see spirits known as ayakashi—was suddenly approached by an ogre. Demanding she pay her grandfather’s debt, Odanna made a huge request: her hand in marriage! Refusing this absurd offer, Aoi decided to work at the Tenjin-ya bed and breakfast to pay back what her family owes. Where we left off, Aoi continues her employment at the Tenjin-ya where even more ayakashi drama ensues and challenges await her.<br><br>\n\n(Source: Crunchyroll, edited)"
+    },
+    {
       "id": "tt36132068",
       "type": "series",
       "name": "Yano-kun's Ordinary Days",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183965-7oMzkJp4FUyP.jpg",
       "description": "Genres: Comedy, Romance, Slice of Life\nTags:Seinen/School/Primarily Teen Cast/Heterosexual\nKiyoko Yoshida is an overanxious class representative who can’t help but worry about Tsuyoshi Yano, who sits beside her. Tsuyoshi comes to school covered in bruises, and as Kiyoko tends to him day after day, the two draw closer. Where will Kiyoko’s feelings take her? Will Tsuyoshi’s life ever be normal? A romantic comedy between an anxious girl and a boy who’s always injured is about to begin!\n<br><br>\n(Source: Crunchyroll)"
+    },
+    {
+      "id": "tt38037460",
+      "type": "series",
+      "name": "Pass the Monster Meat, Milady!",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183291-RHLPdeftGxeQ.jpg",
+      "description": "Genres: Fantasy, Romance\nTags:Female Protagonist/Shoujo/Royal Affairs/Food\nAny proper noble lady must cultivate refined tastes, and Lady Melphiera’s delicacy of choice is…monsters! Unfortunately, society frowns upon such unladylike cravings and brands her the “Voracious Villainess.” At a banquet, she’s attacked by a monster, only to be saved by the feared “Blood-Mad Duke.” He’s brutal, mysterious, and charming. Could he be the one to appreciate her monstrous appetite?\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt36912922",
@@ -246,18 +246,18 @@
       "description": "Genres: Adventure, Comedy, Fantasy, Slice of Life\nTags:Male Protagonist/Isekai/Magic/Food/Elf/Dragons\nKamishiro Takeru is a completely ordinary salaryman who reincarnates in another world—a world of swords and magic called Madeus—and starts his new isekai life with lots of new skills! Takeru must make the most of his enhanced physical strength, unbelievable magic power, and the \"Search\" ability that allows him to find items of worth as his great isekai journey begins!\n<br><br>\n\n(Source: Crunchyroll) <br><br>\n<i>Note: Each episode streams 1 week early on some streaming services. The original TV broadcast starts on October 7th, 2025.</i>"
     },
     {
-      "id": "tt37499375",
-      "type": "series",
-      "name": "DIGIMON BEATBREAK",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx188388-aXx9fsnvezBf.jpg",
-      "description": "Genres: Adventure, Fantasy, Sci-Fi\nTags:Urban\n<i>GLITCH THE FUTURE.</i><br><br>\n\n\"e-Pulse,\" which is generated by human thoughts and emotions, was used as the energy source for the AI support device \"Sapotama.\" From the shadows of this remarkable development, terrifying monsters appear. Digimon are living beings that evolve by consuming e-Pulse. Tomorou Tenma is drawn into an extraordinary experience after meeting Gekkomon, who suddenly appears from his Sapotama. While living together with Kyou Sawashiro and other members of the bounty hunting team \"Golden Dawn,\" Tomorou renews his resolve. What new future will be forged by humans and Digimon? <br><br>\n\n(Source: DIGIMON BEATBREAK Official Site, edited)"
-    },
-    {
       "id": "tt36987681",
       "type": "series",
       "name": "A Star Brighter Than the Sun",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186621-jFeAgDQkQMUm.jpg",
       "description": "Genres: Romance\nTags:Shoujo/School/Heterosexual/Female Protagonist\nSae Iwata, a slightly tougher-than-average girl, falls for the gentle smile of Kouki Kamishiro, a delicate boy, back in elementary school. By the time they enter junior high school, Kuoki has grown into a charming and popular teen who now feels out of reach. When they are assigned to the sports festival committee together, Sae’s long-hidden first love begins to stir once more.\n<br><br>\n(Source: Amazon Prime Video, edited)"
+    },
+    {
+      "id": "tt37499375",
+      "type": "series",
+      "name": "DIGIMON BEATBREAK",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx188388-aXx9fsnvezBf.jpg",
+      "description": "Genres: Adventure, Fantasy, Sci-Fi\nTags:Urban\n<i>GLITCH THE FUTURE.</i><br><br>\n\n\"e-Pulse,\" which is generated by human thoughts and emotions, was used as the energy source for the AI support device \"Sapotama.\" From the shadows of this remarkable development, terrifying monsters appear. Digimon are living beings that evolve by consuming e-Pulse. Tomorou Tenma is drawn into an extraordinary experience after meeting Gekkomon, who suddenly appears from his Sapotama. While living together with Kyou Sawashiro and other members of the bounty hunting team \"Golden Dawn,\" Tomorou renews his resolve. What new future will be forged by humans and Digimon? <br><br>\n\n(Source: DIGIMON BEATBREAK Official Site, edited)"
     },
     {
       "id": "tt32832412",
@@ -267,18 +267,18 @@
       "description": "Genres: Drama, Fantasy, Romance\nTags:Shoujo/Anthropomorphism/Heterosexual/Female Protagonist/School/Kemonomimi/CGI\nWhen high schooler Mari bumps into a fellow tardy student, she's surprised to find out he's a beastfolk who's to attend her school! After all, it's not rare for beastfolk to coexist alongside humans, but it's still uncommon, with the prejudice and all. Nervous to meet one at first, Mari soon learns there's more to him than his furry exterior. In fact, the more she gets to know him, the more she finds herself drawn to him, his steadfastness, his kindheartedness, and…his body…\n<BR><BR>\n(Source: Yen Press)"
     },
     {
-      "id": "tt32779175",
-      "type": "series",
-      "name": "The Dark History of the Reincarnated Villainess",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx174914-RfPIqbrapByY.jpg",
-      "description": "Genres: Comedy, Fantasy, Romance\nTags:Shoujo/Isekai/Female Protagonist\nKonoha Satou has a dark history, written throughout middle school—a fantasy adventure of love and magic about the Count’s daughter Konoha Magnolia and the knights who love her! But when it looks like that dark history is going to be uncovered by her mother, Konoha panics and dies in a traffic accident! Opening her eyes, she finds that she’s been reincarnated into the world of her own dark history as Iana Magnolia, the worst villainess of her own creation!\n<br><br>\n(Source: Yen Press)"
-    },
-    {
       "id": "tt37546327",
       "type": "series",
       "name": "Touring After the Apocalypse",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186920-nrYITcE4TEuk.jpg",
       "description": "Genres: Adventure, Sci-Fi, Slice of Life\nTags:Post-Apocalyptic/Iyashikei/Female Protagonist/Travel/Motorcycles\nTwo young girls, Yoko and Airi, travel through an empty post-apocalyptic world.\n<br><br>\nThey photograph the scenery of famous places all to themselves and camp out in towns full of nature.\n<br><br>\nThe two of them ride and travel on a Serow off-road motorbike together, experiencing a never-before-felt freedom in travel with no traffic and no traffic lights.\n<br><br>\nWith the Serow bike, they embark on a journey around a now-destroyed Japan; a unique story about touring on a bike comes to life as an anime series!\n<br><br>\nThe world's over now, so let’s hop on a bike and go on a journey!\n<br><br>\n(Source: Crunchyroll)"
+    },
+    {
+      "id": "tt32779175",
+      "type": "series",
+      "name": "The Dark History of the Reincarnated Villainess",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx174914-RfPIqbrapByY.jpg",
+      "description": "Genres: Comedy, Fantasy, Romance\nTags:Shoujo/Isekai/Female Protagonist\nKonoha Satou has a dark history, written throughout middle school—a fantasy adventure of love and magic about the Count’s daughter Konoha Magnolia and the knights who love her! But when it looks like that dark history is going to be uncovered by her mother, Konoha panics and dies in a traffic accident! Opening her eyes, she finds that she’s been reincarnated into the world of her own dark history as Iana Magnolia, the worst villainess of her own creation!\n<br><br>\n(Source: Yen Press)"
     },
     {
       "id": "tt37431541",
@@ -295,18 +295,18 @@
       "description": "Genres: Comedy, Slice of Life\nTags:Female Protagonist/Primarily Female Cast/Cute Girls Doing Cute Things/Drawing/Yuri/Work/LGBTQ+ Themes\nFutami, a novice shojo manga artist, is finally publishing her beloved shogi manga, Dear Subaru. But…the stress makes her stomach hurt, she’s forced to push the deadline for her first chapter, and she isn’t making any progress on the storyboards. To top it off, she’s gaining weight from midnight snacking and starts having wild delusions! Will Futami be able to enjoy life as a manga artist?!\n<br><br>\n(Source: Crunchyroll)"
     },
     {
+      "id": "tt34852231",
+      "type": "series",
+      "name": "GNOSIA",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185116-OwbfLeI4djRx.jpg",
+      "description": "Genres: Drama, Mystery, Sci-Fi\nTags:Aliens/Survival/Space/LGBTQ+ Themes/Transgender/Amnesia/Primarily Adult Cast/Agender\nThe story of <i>GNOSIA</i> takes place on a ship drifting through space. Gnosia is an enemy that disguises itself as a human and attacks them. It is now on the spaceship, causing everyone onboard to be suspicious of each other. The crew decides to vote on the most suspicious-looking person every day and put them into a cold sleep.<br><br>\n\nIf the humans succeed in putting Gnosia to sleep, they'll win. On the other hand, if they don't, everyone on board is in danger. The right decision must be made. No matter what decision is made by the main character, Yuri, she finds herself in a time loop that returns her to the first day of the crisis. <br><br>\n\nWill the crew on board make the right decision? What is the secret behind the time loop? What secrets hide behind the faces of everyone on board?<br><br>\n\n<i>GNOSIA</i> begins now – a story of looping, fleeting moments that feels like an eternity but passes by in an instant.<br><br>\n\nHave a pleasant journey.<br><br>\n(Source: Crunchyroll)"
+    },
+    {
       "id": "tt32856801",
       "type": "series",
       "name": "Ao no Orchestra 2nd Season",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx170018-1PqdLX68YayA.jpg",
       "description": "Genres: Drama, Music\nTags:Classical Music\nThe second season of <i>Ao no Orchestra</i>."
-    },
-    {
-      "id": "tt34852231",
-      "type": "series",
-      "name": "GNOSIA",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185116-OwbfLeI4djRx.jpg",
-      "description": "Genres: Drama, Mystery, Sci-Fi\nTags:Aliens/Survival/LGBTQ+ Themes/Space/Agender/Transgender/Primarily Adult Cast/Amnesia\nThe story of <i>GNOSIA</i> takes place on a ship drifting through space. Gnosia is an enemy that disguises itself as a human and attacks them. It is now on the spaceship, causing everyone onboard to be suspicious of each other. The crew decides to vote on the most suspicious-looking person every day and put them into a cold sleep.<br><br>\n\nIf the humans succeed in putting Gnosia to sleep, they'll win. On the other hand, if they don't, everyone on board is in danger. The right decision must be made. No matter what decision is made by the main character, Yuri, she finds herself in a time loop that returns her to the first day of the crisis. <br><br>\n\nWill the crew on board make the right decision? What is the secret behind the time loop? What secrets hide behind the faces of everyone on board?<br><br>\n\n<i>GNOSIA</i> begins now – a story of looping, fleeting moments that feels like an eternity but passes by in an instant.<br><br>\n\nHave a pleasant journey.<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt13622982",
